# MRExperiment

./: IMG_4977.HEIC  IMG_4978 2.HEIC  模式识别 作业一.md
CNN/: a2f.py  a2f损失.xlsx  a2f正确率.xlsx  g.py  g损失.xlsx  g正确率.xlsx  h.py  h损失.xlsx  h正确率.xlsx  i.py  i损失.xlsx  i正确率.xlsx  j.py  j损失.xlsx  j正确率.xlsx  main.py  test.py  test2.py  test3.py
EigenFaces/: main  main.cpp  test
EigenFaces/main.dSYM/Contents/Resources/DWARF/: main
EigenFaces/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
EigenFaces/test.dSYM/Contents/Resources/DWARF/: test
EigenFaces/test.dSYM/Contents/Resources/Relocations/aarch64/: test.yml
FaceRecognition/: CMakeLists.txt  Eigenfaces.cpp  Fisherfaces.cpp  in.csv  main  main.cpp  proper.txt  test  test.cpp
FaceRecognition/data/: in.csv
FaceRecognition/main.dSYM/Contents/Resources/DWARF/: main
FaceRecognition/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
FaceRecognition/test.dSYM/Contents/Resources/DWARF/: test
Fisherfaces/: main  main.cpp
Fisherfaces/main.dSYM/Contents/Resources/DWARF/: main
Fisherfaces/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
KDE/: create_data.py  data.xlsx  data_1e4.xlsx  data_1e5.xlsx  main.m  main.py  sample.py
PCA/: create_data.py  data.xlsx  main.py  useAPI.py
SVM/: main.py  scaledata_test.txt  w2a.t  运行结果.xlsx
作业一/: data.xlsx  main.py  my_white_RES.xlsx  useAPI.py
作业题目/: IMG_5035.HEIC  IMG_5054.HEIC  IMG_5055.HEIC  IMG_5056.HEIC
文档/: 072110112冉中益 作业三.md  模式识别 作业一.md  模式识别 作业二.md
